--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,11 @@ body {
     padding: 20px;
 }
 
+.section {
+    padding-bottom: 5%;
+
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -156,4 +161,51 @@ iframe {
     width: 50px;
     height: 50px;
     filter: brightness(0) invert(1);
+}
+
+.skillSection {
+    display: flex;
+    flex-direction: column;
+}
+
+.classes {
+    display: flex;
+    flex-direction: row;
+    flex-flow: row wrap;
+    align-content: space-around;
+    justify-content: center;
+    gap: 15px;
+    margin: 20px;
+}
+
+.card {
+    background-color: #70869D;
+    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
+	width: calc(25% - 15px);
+	text-align: center;
+	border-radius: 16px;
+	overflow: hidden;
+    padding: 10px; 
+}
+
+.card ul {
+    text-align: left;
+    margin: 0;
+    padding-left: 20px;
+}
+
+.skills {
+    padding: 20px;
+}
+
+.skillImage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+
+.caption {
+    text-align: center;
 }
